2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: Remove 8.5 requirement.

2008-08-11  Andreas Kupries  <andreask@activestate.com>

	* library/tm.tcl: Added a 'package provide' command to the
	generated ifneeded scripts of Tcl Modules, for early detection of
	conflicts between the version specified through the file name and
	a 'provide' command in the module implementation, if any. Note
	that this change also now allows Tcl Modules to not provide a
	'provide' command at all, and declaring their version only through
	their filename.

	* generic/tclProc.c (Tcl_ProcObjCmd): Fixed memory leak triggered
	* tests/proc.test: by procbody::test::proc. See [Bug 2043636].
	Added a test case demonstrating the leak before the fix. Fixed a
	few spelling errors in test descriptions as well.

2008-08-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:        Bump http version to 2.7.1 to account
	* library/http/pkgIndex.tcl:    for [Bug 2046486] bug fix.  This
	* unix/Makefile.in:             release of http now requires a
	* win/Makefile.in:              dependency on Tcl 8.5 to be able to
	* win/makefile.bc:              use the unsigned formats in the
	* win/makefile.vc:              [binary scan] command.

2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: crc field from zlib data should be treated as
	unsigned for 64bit support [Bug 2046846]

2008-08-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclProc.c: completely removed ProcCompileProc, which was
	a fix for [Bug 1482718]. This is not needed at least since
	varReform, where the local variable data at runtime is read from
	the CallFrame and/or the LocalCache.
	
2008-08-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    slight cleanup
	* generic/tclCompile.h:
	* generic/tclExecute.c: 

2008-08-09  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclExecute.c:	fix warnings.
